# SecsGemBridge

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  backup-codes.txt  vcpkg-configuration.json
TCPDemo/Client/: CMakeLists.txt  clientwidget.cpp  clientwidget.h  clientwidget.ui  main.cpp
TCPDemo/Server/: CMakeLists.txt  main.cpp  serverwidget.cpp  serverwidget.h  serverwidget.ui
WhyApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: linux.cmake  platform.cmake  short_path.cmake
src/: CMakeLists.txt  main.cpp
src/App/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Common/: CMakeLists.txt  FileUtil.cpp  Singleton.h  Standard.h  TextUtil.cpp
src/Foundation/: CMakeLists.txt
src/Foundation/Common/: CMakeLists.txt
src/Foundation/Platform/: CMakeLists.txt
src/Platform/: CMakeLists.txt
src/Platform/include/: endpoint_def.h  endpoint_interface.h  endpoint_listener_interface.h  procedure_call_interface.h
src/Platform/linux/: CMakeLists.txt  tcp_client.cpp  tcp_client.h
src/Platform/windows/: CMakeLists.txt  tcp_client.cpp  tcp_client.h  tcp_single_server.cpp  tcp_single_server.h
src/SecsGem/: CMakeLists.txt  hsms_def.h  hsms_transport.cpp  hsms_transport.h  secs.def  secs_transport_interface.h
src/SecsGem/include/: gem_info.h
src/WhyApp/: CMakeLists.txt  mainwindow.cpp
